# jupyter-copilot

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  Untitled.ipynb  install.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
jupyter-config/server-config/: jupyter_copilot.json
jupyter_copilot/: __init__.py  chat.py  completions.py  globals.py  handlers.py  lsp.py  notebook.py
notebooks/: R.ipynb  julia.ipynb  julia2.ipynb  one.ipynb  something.ipynb  two.ipynb
schema/: plugin.json
src/: chat.ts  completions.ts  handler.ts  index.ts  lsp.ts  utils.ts
src/commands/: authentication.ts
